feat(metrics): 集成Micrometer实现分布式追踪和指标采集
- 各微服务引入Actuator、Prometheus和OpenTelemetry依赖
- 配置management.endpoints暴露health、info、metrics、prometheus和loggers接口
- 网关增加GatewayMetrics类，提供请求计数、延迟、慢请求等详细指标采集
- 问答服务新增RagMetrics指标采集完整RAG链路耗时、阶段耗时、检索命中和意图统计
- SSE事件发布器SsePublisher集成Micrometer，采集发送成功失败次数、延迟及活动连接数
- 客户端增加二次token校验防止非法访问，确保用户信息有效性
- Prometheus配置新增网关及各服务的指标抓取任务
- 优化问答服务部分逻辑，增加指标上报和状态追踪
- 添加各服务spring boot actuator相关配置，方便统一管理和监控